--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "vr-sobradofs",
+  "name": "vr-tour",
   "version": "1.0.0",
+  "homepage": "https://fefurst.github.io/vr-tour",
   "description": "A simple building vr tour ",
   "main": "src/index.js",
   "private": true,
@@ -8,7 +9,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
@@ -16,10 +19,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  
   "author": "Felipe Furst",
   "license": "ISC",
-  
   "dependencies": {
     "@react-three/drei": "^9.19.2",
     "@react-three/fiber": "^8.2.2",
@@ -29,5 +30,8 @@
     "react-scripts": "^5.0.1",
     "react-umami": "^1.0.1",
     "three": "^0.143.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
